// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should match snapshot without a type 1`] = `
<div
  className="ter-alert ter-alert--default"
  onClick={[MockFunction]}
>
  <button
    aria-label="Close Alert"
    className="ter-alert__close"
  >
    <Icon
      size="16px"
      type="enclosed-x-dark-16px"
    />
  </button>
  This is an alert.
</div>
`;

exports[`Alert should match the snapshot 1`] = `
<div
  className="ter-alert ter-alert--ter-alert--default"
  onClick={[MockFunction]}
>
  <button
    aria-label="Close Alert"
    className="ter-alert__close"
  >
    <Icon
      size="16px"
      type="enclosed-x-dark-16px"
    />
  </button>
  This is an alert.
</div>
`;
